--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     </style>
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />    
-    <script type="module" crossorigin src="/assets/shop-bundle.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/shop-bundle.css">
+    <script type="module" crossorigin src="/build/shop-bundle.js"></script>
+    <link rel="stylesheet" crossorigin href="/build/shop-bundle.css">
   </head>
   <body class="antialiased flex h-full text-base text-gray-700" style="overflow:visible !important; margin-right:0 !important; position:static !important;">
     <div class="flex grow" id="root"></div> 
